# matterjs-server

./: .gitattributes  .gitignore  .mocharc.cjs  .oxfmtrc.json  .oxlintrc.json  .prettierignore  ALPHABETATESTS.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  README.md  package-lock.json  package.json  tsconfig.json  version.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  init-firewall.sh  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-approve-release.yml  build-test.js.yml  matterjs-nightly-validation.yml  nightly-dev-release.yml  official-release.yml  release-npm.yml  release-python-client.yml  test-python-ble-proxy.yml  test-python-client.yml
docker/matterjs-server/: Dockerfile  Dockerfile.dev  docker-compose.yml  healthcheck.sh
docker/python-matter-server/: Dockerfile
docs/: LOGGING.md  SPEC_DIFFERENCES.md  ble-proxy-protocol.md  cli.md  docker.md  os_requirements.md  websocket-api-schema-changelog.md  websockets_api.md
docs/plans/: 2026-02-05-ble-proxy-design.md  2026-02-05-ble-proxy-implementation.md  2026-02-16-ha-ble-proxy-guide.md  2026-02-17-matter-python-client-design.md  2026-02-17-matter-python-client-plan.md  2026-02-19-invoke-command-deduplication-design.md
python_ble_proxy/: .gitignore  README.md  pyproject.toml
python_ble_proxy/matter_ble_proxy/: __init__.py  bleak_backend.py  cli.py  client.py  protocol.py
python_ble_proxy/matter_ble_proxy/example/: __init__.py  cli.py
python_ble_proxy/tests/: test_connect_errors.py  test_connect_strategy.py  test_protocol.py
python_client/: README.md  pyproject.toml
python_client/chip/: ChipUtility.py
python_client/chip/clusters/: ClusterObjects.py  Objects.py  Types.py  enum.py
python_client/chip/clusters/_cluster_defs/: CarbonMonoxideConcentrationMeasurement.py  Descriptor.py  GeneralCommissioning.py  Globals.py  Identify.py  MediaInput.py  MicrowaveOvenMode.py  ModeSelect.py  OvenCavityOperationalState.py  OvenMode.py  RefrigeratorAndTemperatureControlledCabinetMode.py  RvcCleanMode.py  RvcOperationalState.py  ScenesManagement.py  ThermostatUserInterfaceConfiguration.py  ThirdRealityMeteringCluster.py  ThreadNetworkDiagnostics.py  ThreadNetworkDirectory.py  TimeSynchronization.py  WindowCovering.py  __init__.py
python_client/chip/clusters/cluster_defs/: AccessControl.py  AccountLogin.py  Actions.py  ActivatedCarbonFilterMonitoring.py  AirQuality.py  AmbientContextSensing.py  ApplicationLauncher.py  BasicInformation.py  Binding.py  BooleanState.py  BooleanStateConfiguration.py  BridgedDeviceBasicInformation.py  CameraAvSettingsUserLevelManagement.py  CameraAvStreamManagement.py  Channel.py  Chime.py  ClosureControl.py  ClosureDimension.py  ColorControl.py  CommissionerControl.py  CommodityMetering.py  CommodityPrice.py  CommodityTariff.py  ContentAppObserver.py  ContentControl.py  ContentLauncher.py  DeviceEnergyManagement.py  DeviceEnergyManagementMode.py  DishwasherAlarm.py  DishwasherMode.py  DoorLock.py  DraftElectricalMeasurementCluster.py  EcosystemInformation.py  ElectricalEnergyMeasurement.py  ElectricalGridConditions.py  ElectricalPowerMeasurement.py  EnergyEvse.py  EnergyPreference.py  EthernetNetworkDiagnostics.py  EveCluster.py  (+72 more)
python_client/chip/clusters/objects/: AccessControl.py  AccountLogin.py  Actions.py  ActivatedCarbonFilterMonitoring.py  AdministratorCommissioning.py  AirQuality.py  ApplicationBasic.py  ApplicationLauncher.py  AudioOutput.py  BasicInformation.py  Binding.py  BooleanState.py  BooleanStateConfiguration.py  BridgedDeviceBasicInformation.py  CarbonDioxideConcentrationMeasurement.py  CarbonMonoxideConcentrationMeasurement.py  Channel.py  ColorControl.py  CommissionerControl.py  ContentAppObserver.py  ContentControl.py  ContentLauncher.py  Descriptor.py  DeviceEnergyManagement.py  DeviceEnergyManagementMode.py  DiagnosticLogs.py  DishwasherAlarm.py  DishwasherMode.py  DoorLock.py  DraftElectricalMeasurementCluster.py  EcosystemInformation.py  ElectricalEnergyMeasurement.py  ElectricalPowerMeasurement.py  EnergyEvse.py  EnergyEvseMode.py  EnergyPreference.py  EthernetNetworkDiagnostics.py  EveCluster.py  FanControl.py  FixedLabel.py  (+83 more)
python_client/chip/tlv/: __init__.py  tlvlist.py
python_client/matter_server/: __init__.py
python_client/matter_server/client/: client.py  connection.py
python_client/matter_server/client/models/: device_types.py  node.py
python_client/matter_server/common/: custom_clusters.py  errors.py  models.py
python_client/matter_server/common/helpers/: api.py  json.py  util.py
python_client/scripts/: compare_clusters.py  compare_summary.py  generate-python-clusters.ts  tsconfig.json
python_client/tests/: conftest.py  mock_server.mjs  test_client_integration.py  test_credentials.py  test_event_dispatch.py  test_icd.py  test_imports.py  test_integration.py  test_network_topology.py  test_webrtc_protocol.py
python_client/tests/helpers/: __init__.py  matter_test_client.py  process_helpers.py
test/: IntegrationTest.ts
test/fixtures/: TestLightDevice.ts
test/helpers/: MatterWebSocketClient.ts  ProcessHelpers.ts  index.ts
tsc/: tsconfig.base.json
utils/: relock.js  sync-matterjs.js
